AB#216308: search autocomplete visibility fix

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/search/search-input/_search-input.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/search/search-input/_search-input.scss
@@ -68,6 +68,7 @@
   font-size: 18px;
   line-height: 140%;
   color: clr(primary);
+  z-index: 10;
 
   .mars-search-autocomplete-suggestions-wrapper {
     display: none;
